@@ -1,1 +1,26 @@
 # CampusCourseRecordsManager
+Based on the project brief, your README.md file should be comprehensive and well-structured, providing a clear overview of your project and fulfilling all the mandatory technical requirements.
+
+Here is a template you can use to structure your README.md file.
+
+Campus Course & Records Manager (CCRM)
+Project Overview
+This is a console-based Java application designed to manage students, courses, enrollments, and grades for a campus. It is built to demonstrate core Java SE concepts, including OOP principles, modern I/O with NIO.2, the Streams API, and various design patterns.
+
+How to Run
+
+Prerequisites: Java Development Kit (JDK) 21 or later.
+
+Commands:
+
+Compile: javac --module-path [path_to_fx_mods] --add-modules [modules] src/edu/ccrm/cli/CCRMApp.java (Adjust command based on your module setup).
+
+Run: java --module-path [path_to_fx_mods] --add-modules [modules] edu.ccrm/edu.ccrm.cli.CCRMApp
+
+Setup & Configuration
+Windows Installation Steps: Provide a step-by-step guide on how to install Java on Windows, including setting up environment variables. Include a screenshot showing 
+
+java -version output. 
+
+
+Eclipse IDE Setup: Document the process of creating a new Java project in Eclipse and configuring the run settings. Include screenshots.
